--- a/app/src/main/res/layout/fragment_task_list.xml
+++ b/app/src/main/res/layout/fragment_task_list.xml
@@ -87,7 +87,7 @@
                 android:id="@+id/ll_title_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#D1D1D1"
+                android:background="#F3F3F3"
                 android:elevation="@dimen/task_item_title_view_elevation"
                 android:gravity="center"
                 android:orientation="horizontal"
@@ -232,6 +232,7 @@
                 android:elevation="@dimen/task_item_add_card_text_elevation"
                 android:foreground="?attr/selectableItemBackground"
                 android:gravity="center"
+                android:visibility="gone"
                 android:padding="@dimen/task_item_add_item_text_padding"
                 android:text="Add card"
                 android:textColor="#000000"
