--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -3,7 +3,7 @@
     android:layout_height="wrap_content"
     android:padding="16dp"
     android:layout_margin="5dp"
-    android:background="#ACACAC"
+    android:background="@drawable/baseline_search_25"
     android:orientation="horizontal">
 
 <de.hdodenhof.circleimageview.CircleImageView
