--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -6,7 +6,7 @@
     android:padding="16dp">
 
     <!-- Profile Picture -->
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/image_profile"
         android:layout_width="100dp"
         android:layout_height="100dp"
