--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -53,4 +53,25 @@
     <dimen name="item_card_name_text_size">16sp</dimen>
     <dimen name="item_card_members_text_padding">10dp</dimen>
     <dimen name="item_card_members_text_size">14sp</dimen>
+
+    <dimen name="members_content_padding">16dp</dimen>
+    <dimen name="members_cv_marginTop">5dp</dimen>
+    <dimen name="item_member_marginBottom">10dp</dimen>
+    <dimen name="item_member_content_padding">10dp</dimen>
+    <dimen name="item_member_member_image_size">60dp</dimen>
+    <dimen name="item_member_image_circular_width_size">0.5dp</dimen>
+    <dimen name="item_member_detail_layout_marginStart">10dp</dimen>
+    <dimen name="item_member_name_text_size">18sp</dimen>
+    <dimen name="item_member_email_text_size">14sp</dimen>
+    <dimen name="item_member_divider_height">0.3dp</dimen>
+    <dimen name="item_member_divider_marginTop">5dp</dimen>
+
+    <dimen name="card_details_content_padding">16dp</dimen>
+    <dimen name="card_details_cv_card_name_marginBottom">10dp</dimen>
+    <dimen name="card_details_cv_content_padding">16dp</dimen>
+    <dimen name="card_details_label_text_size">14sp</dimen>
+    <dimen name="card_details_value_marginTop">5dp</dimen>
+    <dimen name="card_details_value_padding">10dp</dimen>
+    <dimen name="card_details_members_label_marginTop">15dp</dimen>
+    <dimen name="card_details_update_btn_marginTop">30dp</dimen>
 </resources>
