--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
 
     <color name="primary_text_color">#373A43</color>
     <color name="secondary_text_color">#7A8089</color>
-    <color name="primary_color">#FF4081</color>
+    <color name="primary_color">#FFFFFF</color>
 
     <color name="Color1">#F12525</color>
     <color name="Color2">#25B82B</color>
