--- a/app/src/main/res/layout/fragment_chat_search.xml
+++ b/app/src/main/res/layout/fragment_chat_search.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragment.ChatSearch">
 
@@ -12,7 +13,7 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@drawable/search_toolbar_background"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+       app:layout_constraintBottom_toTopOf="@id/chat_search"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -36,12 +37,12 @@
             app:layout_constraintTop_toTopOf="parent">
             <EditText
                 android:id="@+id/tv_title_task"
-                android:layout_width="230dp"
+                android:layout_width="280dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="7dp"
                 android:layout_marginLeft="40dp"
                 android:gravity="center_vertical"
-                android:hint="         search"
+                android:hint="                    search"
                 android:background="@null"
                 android:singleLine="true"
                 android:imeOptions="actionSearch"
