--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -1,29 +1,35 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="16dp"
-    android:layout_margin="5dp"
-    android:background="@drawable/baseline_search_25"
-    android:orientation="horizontal">
-
-<de.hdodenhof.circleimageview.CircleImageView
-    android:id="@+id/rv_pic"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/baseline_person_24"
-        />
-
-    <TextView
-       android:padding="2sp"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="20dp"
-        android:id="@+id/rv_title"
-        android:layout_width="wrap_content"
+    android:layout_margin="8dp"
+    android:background="@drawable/search_item_background"
+    android:elevation="10dp"
+    >
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:textColor="@android:color/black"
+        android:orientation="horizontal"
+        android:padding="10dp">
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/rv_pic"
+            android:layout_width="@dimen/item_member_member_image_size"
+            android:layout_height="@dimen/item_member_member_image_size"
+            android:padding="5dp"
+            android:src="@drawable/baseline_person_24" />
+
+        <TextView
+            android:id="@+id/rv_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:gravity="center"
+            android:layout_gravity="center"
         android:textStyle="bold"
+            android:textSize="18sp"
         android:text="boardname" />
 
+    </androidx.appcompat.widget.LinearLayoutCompat>
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
